[package]
name = "embed"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies.stm32f4xx-hal]
version = "0.20.0"
features = ["stm32f401"]

[dependencies.cortex-m]
version = "0.7.3"
features = [ "critical-section-single-core" ] # Needed by defmt-brtt

[dependencies]
cortex-m-rt = "0.7.3"
defmt = { version = "0.3", features = ["encoding-rzcobs"] } # Logging framework
defmt-brtt = {version = "0.1", features = ["rtt"] } # Enables logging over RTT
panic-probe = { version = "0.3", features = ["print-defmt"] } # Panic handler for defmt